# chess-engine

./: .gitignore  CMakeLists.txt  README.md  main.cpp  t.txt
src/board/: Board.cpp  Board.h
src/engine/: ChessEngine.cpp  ChessEngine.h  ChessEngineFactory.cpp  ChessEngineFactory.h
src/figures/: Figure.cpp  Figure.h  FigureType.h
src/pieces/: Piece.cpp  Piece.h  PieceType.h
src/util/: GameStatus.h  Move.h  MoveResult.h  PieceInfo.h  Point.h  PointFactory.cpp  PointFactory.h  PromotionInfo.h  PromotionResult.h  Side.h
src/validators/: BishopMoveValidator.cpp  BishopMoveValidator.h  KingMoveValidator.cpp  KingMoveValidator.h  KnightMoveValidator.cpp  KnightMoveValidator.h  MoveValidator.cpp  MoveValidator.h  PawnMoveValidator.cpp  PawnMoveValidator.h  QueenMoveValidator.cpp  QueenMoveValidator.h  RookMoveValidator.cpp  RookMoveValidator.h
